Fixed CSS for login text disalignment.

--- a/app/assets/stylesheets/modules/_nav.styl
+++ b/app/assets/stylesheets/modules/_nav.styl
@@ -110,15 +110,14 @@ nav.top-nav
     margin-bottom: -1px;
     display: inline-block;
     font-size 16px
-    vertical-align middle
+    vertical-align top
 
   .expand
-    overflow hidden
     display inline-block
     width 0
     transition all 250ms ease-in-out
     opacity 0
-    vertical-align middle
+    vertical-align top
     white-space nowrap
     text-align left
 
